Updated project titles

--- a/index.html
+++ b/index.html
@@ -181,18 +181,18 @@
                         <a href="https://isaiahnoelsalazar.github.io/codenotes/">Code Notes</a>
                         <a href="https://isaiahnoelsalazar.github.io/doc-to-pdf/">DOC to PDF</a>
                         <a href="http://openweb.fwh.is/e-commerce.php">E-Commerce Prototype</a>
-                        <a href="https://isaiahnoelsalazar.github.io/electronic-gadget-store/">Electronic Gadget Store | School Assignment</a>
+                        <a href="https://isaiahnoelsalazar.github.io/electronic-gadget-store/">Electronic Gadget Store | School Work</a>
                         <a href="https://isaiahnoelsalazar.github.io/live-html/">Live HTML</a>
                         <a href="http://openweb.fwh.is/">Live PHP Pages</a>
-                        <a href="https://isaiahnoelsalazar.github.io/multiplication-table/">Multiplication Table | School Assignment</a>
+                        <a href="https://isaiahnoelsalazar.github.io/multiplication-table/">Multiplication Table | School Work</a>
                         <a href="https://isaiahnoelsalazar.github.io/thml/">My old HTML practice website</a>
-                        <a href="https://isaiahnoelsalazar.github.io/personal-webpage/">Personal Webpage | School Assignment</a>
+                        <a href="https://isaiahnoelsalazar.github.io/personal-webpage/">Personal Webpage | School Work</a>
                         <a href="https://isaiahnoelsalazar.github.io/pdf-to-doc/">PDF to DOC</a>
                         <a href="https://isaiahnoelsalazar.github.io/simple-web-calculator/">Simple Web Calculator</a>
                         <a href="https://isaiahnoelsalazar.github.io/typey/">Typey</a>
                         <a href="https://isaiahnoelsalazar.github.io/webbook/">WebBook</a>
-                        <a href="https://isaiahnoelsalazar.github.io/website-observation-1/">Website Observation 1 | School Assignment</a>
-                        <a href="https://isaiahnoelsalazar.github.io/women-with-baskets/">Women with Baskets | School Assignment</a>
+                        <a href="https://isaiahnoelsalazar.github.io/website-observation-1/">Website Observation 1 | School Work</a>
+                        <a href="https://isaiahnoelsalazar.github.io/women-with-baskets/">Women with Baskets | School Work</a>
                     </div>
                     <div id="spacer"></div>
                     <div id="separator"></div>
@@ -204,8 +204,8 @@
                         <a href="https://github.com/isaiahnoelsalazar/BusSeatingArrangementExample/">BusSeatingArrangementExample (Android 4.1+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/compass-download/">Compass (Android 4.2+)</a>
                         <a href="https://isaiahnoelsalazar.github.io/htmleditor-download/">HTML Editor (Android 4.2+)</a>
-                        <a href="https://isaiahnoelsalazar.github.io/matchupgame-download/">Match Up Game (Android 7.0+) | School Assignment</a>
-                        <a href="https://github.com/isaiahnoelsalazar/Monay/">Monay (Android 7.0+) | School Assignment</a>
+                        <a href="https://isaiahnoelsalazar.github.io/matchupgame-download/">Match Up Game (Android 7.0+) | School Work</a>
+                        <a href="https://github.com/isaiahnoelsalazar/Monay/">Monay (Android 7.0+) | School Work</a>
                         <a href="https://isaiahnoelsalazar.github.io/note-download/">Note (Android 4.1+)</a>
                         <a href="https://github.com/isaiahnoelsalazar/saia_ProjectA/">saia_ProjectA (Android 6.0+)</a>
                         <a href="https://github.com/isaiahnoelsalazar/sAP/">sAP (Android 6.0+)</a>
@@ -229,15 +229,15 @@
                     <div id="spacer"></div>
                     <h2>Python Programs</h2>
                     <div class="page-list">
-                        <a href="https://github.com/isaiahnoelsalazar/SamplePythonTurtleKeyInput/">Sample Python Turtle - Key Input | School Assignment</a>
-                        <a href="https://github.com/isaiahnoelsalazar/SamplePythonTurtleYellowDucky/">Sample Python Turtle - Yellow Ducky | School Assignment</a>
+                        <a href="https://github.com/isaiahnoelsalazar/SamplePythonTurtleKeyInput/">Sample Python Turtle - Key Input | School Work</a>
+                        <a href="https://github.com/isaiahnoelsalazar/SamplePythonTurtleYellowDucky/">Sample Python Turtle - Yellow Ducky | School Work</a>
                     </div>
                     <div id="spacer"></div>
                     <div id="separator"></div>
                     <div id="spacer"></div>
                     <h2>Unity Games</h2>
                     <div class="page-list">
-                        <a href="https://github.com/isaiahnoelsalazar/SalazarIsaiahNoel_BSIT701P_Lab2/">SalazarIsaiahNoel_BSIT701P_Lab2 | School Assignment</a>
+                        <a href="https://github.com/isaiahnoelsalazar/SalazarIsaiahNoel_BSIT701P_Lab2/">SalazarIsaiahNoel_BSIT701P_Lab2 | School Work</a>
                     </div>
                     <div id="spacer"></div>
                     <div id="separator"></div>
