Updated project titles

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <div id="spacer"></div>
                     <h2>C# Programs</h2>
                     <div class="page-list">
-                        <a href="https://github.com/isaiahnoelsalazar/AUTOLANDIA-Sales-and-Revenue-Report-Generation-System/">AUTOLANDIA Sales and Revenue Report Generation System</a>
+                        <a href="https://github.com/isaiahnoelsalazar/AUTOLANDIA-Sales-and-Revenue-Report-Generation-System/">AUTOLANDIA Sales and Revenue Report Generation System | Capstone Project</a>
                         <a href="https://github.com/isaiahnoelsalazar/ScreenRecorder/">Screen Recorder</a>
                         <a href="https://github.com/isaiahnoelsalazar/POS-System-Prototype/">POS System Prototype</a>
                     </div>
