--- a/index.html
+++ b/index.html
@@ -39,57 +39,6 @@
         <meta name="msapplication-TileColor" content="#1F1F1F">
         <meta name="msapplication-TileImage" content="resources/ms-icon-144x144.png">
         <title>Isaiah Noel P. Salazar</title>
-        <!--this works only in Chrome i think -->
-        <script type="speculationrules">
-            {
-                "prefetch": [
-                    {
-                        "urls": [
-                            "https://github.com/isaiahnoelsalazar/BusSeatingArrangementExample/",
-                            "https://github.com/isaiahnoelsalazar/CSSimpleFunctions/",
-                            "https://github.com/isaiahnoelsalazar/Monay/",
-                            "https://github.com/isaiahnoelsalazar/POS-System-Prototype/",
-                            "https://github.com/isaiahnoelsalazar/saia_ProjectA/",
-                            "https://github.com/isaiahnoelsalazar/SalazarIsaiahNoel_BSIT701P_Lab2/",
-                            "https://github.com/isaiahnoelsalazar/SamplePythonTurtleKeyInput/",
-                            "https://github.com/isaiahnoelsalazar/SamplePythonTurtleYellowDucky/",
-                            "https://github.com/isaiahnoelsalazar/sAP/",
-                            "https://github.com/isaiahnoelsalazar/ScreenRecorder/",
-                            "https://github.com/isaiahnoelsalazar/SimpleFunctions/",
-                            "https://github.com/isaiahnoelsalazar/SkillSwap/",
-                            "https://github.com/isaiahnoelsalazar/Ulap/",
-                            "https://isaiahnoelsalazar.github.io/bad-phone-number-inputs/",
-                            "https://isaiahnoelsalazar.github.io/basabasa-download/",
-                            "https://isaiahnoelsalazar.github.io/billcalculator-download/",
-                            "https://isaiahnoelsalazar.github.io/black/",
-                            "https://isaiahnoelsalazar.github.io/codenotes/",
-                            "https://isaiahnoelsalazar.github.io/compass-download/",
-                            "https://isaiahnoelsalazar.github.io/doc-to-pdf/",
-                            "https://isaiahnoelsalazar.github.io/electronic-gadget-store/",
-                            "https://isaiahnoelsalazar.github.io/htmleditor-download/",
-                            "https://isaiahnoelsalazar.github.io/live-html/",
-                            "https://isaiahnoelsalazar.github.io/matchupgame-download/",
-                            "https://isaiahnoelsalazar.github.io/multiplication-table/",
-                            "https://isaiahnoelsalazar.github.io/note-download/",
-                            "https://isaiahnoelsalazar.github.io/pdf-to-doc/",
-                            "https://isaiahnoelsalazar.github.io/shoppinglist-download/",
-                            "https://isaiahnoelsalazar.github.io/simple-web-calculator/",
-                            "https://isaiahnoelsalazar.github.io/squulite-download/",
-                            "https://isaiahnoelsalazar.github.io/studentregistrationapp-download/",
-                            "https://isaiahnoelsalazar.github.io/thml/",
-                            "https://isaiahnoelsalazar.github.io/typey/",
-                            "https://isaiahnoelsalazar.github.io/webbook/",
-                            "https://isaiahnoelsalazar.github.io/website-observation-1/",
-                            "https://isaiahnoelsalazar.github.io/women-with-baskets/",
-                            "http://openweb.fwh.is/",
-                            "http://openweb.fwh.is/e-commerce.php",
-                            "https://www.facebook.com/profile.php?id=100085006483044",
-                            "https://x.com/IsaiahNoelSal16"
-                        ]
-                    }
-                ]
-            }
-        </script>
         <link rel="stylesheet" href="css/colors.css">
         <link rel="stylesheet" href="css/fonts.css">
         <link rel="stylesheet" href="css/index.css">
@@ -174,85 +123,6 @@
             </div>
             <div class="pages content">
                 <div id="pages-div-1">
-                    <h2>Live websites</h2>
-                    <div class="page-list">
-                        <a href="https://isaiahnoelsalazar.github.io/bad-phone-number-inputs/">Bad Phone Number Inputs</a>
-                        <a href="https://isaiahnoelsalazar.github.io/black/">Black</a>
-                        <a href="https://isaiahnoelsalazar.github.io/codenotes/">Code Notes</a>
-                        <a href="https://isaiahnoelsalazar.github.io/doc-to-pdf/">DOC to PDF</a>
-                        <a href="http://openweb.fwh.is/e-commerce.php">E-Commerce Prototype</a>
-                        <a href="https://isaiahnoelsalazar.github.io/electronic-gadget-store/">Electronic Gadget Store | School Work</a>
-                        <a href="https://isaiahnoelsalazar.github.io/live-html/">Live HTML</a>
-                        <a href="http://openweb.fwh.is/">Live PHP Pages</a>
-                        <a href="https://isaiahnoelsalazar.github.io/multiplication-table/">Multiplication Table | School Work</a>
-                        <a href="https://isaiahnoelsalazar.github.io/thml/">My old HTML practice website</a>
-                        <a href="https://isaiahnoelsalazar.github.io/personal-webpage/">Personal Webpage | School Work</a>
-                        <a href="https://isaiahnoelsalazar.github.io/pdf-to-doc/">PDF to DOC</a>
-                        <a href="https://isaiahnoelsalazar.github.io/simple-web-calculator/">Simple Web Calculator</a>
-                        <a href="https://isaiahnoelsalazar.github.io/typey/">Typey</a>
-                        <a href="https://isaiahnoelsalazar.github.io/webbook/">WebBook</a>
-                        <a href="https://isaiahnoelsalazar.github.io/website-observation-1/">Website Observation 1 | School Work</a>
-                        <a href="https://isaiahnoelsalazar.github.io/women-with-baskets/">Women with Baskets | School Work</a>
-                    </div>
-                    <div id="spacer"></div>
-                    <div id="separator"></div>
-                    <div id="spacer"></div>
-                    <h2>Android Applications</h2>
-                    <div class="page-list">
-                        <a href="https://isaiahnoelsalazar.github.io/basabasa-download/">Basabasa: Free Manga Reader App (Android 7.1+)</a>
-                        <a href="https://isaiahnoelsalazar.github.io/billcalculator-download/">Bill Calculator (Android 4.1+)</a>
-                        <a href="https://github.com/isaiahnoelsalazar/BusSeatingArrangementExample/">BusSeatingArrangementExample (Android 4.1+)</a>
-                        <a href="https://isaiahnoelsalazar.github.io/compass-download/">Compass (Android 4.2+)</a>
-                        <a href="https://isaiahnoelsalazar.github.io/htmleditor-download/">HTML Editor (Android 4.2+)</a>
-                        <a href="https://isaiahnoelsalazar.github.io/matchupgame-download/">Match Up Game (Android 7.0+) | School Work</a>
-                        <a href="https://github.com/isaiahnoelsalazar/Monay/">Monay (Android 7.0+) | School Work</a>
-                        <a href="https://isaiahnoelsalazar.github.io/note-download/">Note (Android 4.1+)</a>
-                        <a href="https://github.com/isaiahnoelsalazar/saia_ProjectA/">saia_ProjectA (Android 6.0+)</a>
-                        <a href="https://github.com/isaiahnoelsalazar/sAP/">sAP (Android 6.0+)</a>
-                        <a href="https://isaiahnoelsalazar.github.io/shoppinglist-download/">Shopping List App (Android 7.0+)</a>
-                        <a href="https://github.com/isaiahnoelsalazar/SkillSwap/">SkillSwap (Android 7.0+)</a>
-                        <a href="https://isaiahnoelsalazar.github.io/squulite-download/">SQuuLite (Android 7.0+)</a>
-                        <a href="https://isaiahnoelsalazar.github.io/studentregistrationapp-download/">Student Registration App (Android 7.0+)</a>
-                        <a href="https://github.com/isaiahnoelsalazar/Ulap/">Ulap (Android 7.0+)</a>
-                    </div>
-                    <div id="spacer"></div>
-                    <div id="separator"></div>
-                    <div id="spacer"></div>
-                    <h2>C# Programs</h2>
-                    <div class="page-list">
-                        <a href="https://github.com/isaiahnoelsalazar/AUTOLANDIA-Sales-and-Revenue-Report-Generation-System/">AUTOLANDIA Sales and Revenue Report Generation System | Capstone Project</a>
-                        <a href="https://github.com/isaiahnoelsalazar/ScreenRecorder/">Screen Recorder</a>
-                        <a href="https://github.com/isaiahnoelsalazar/POS-System-Prototype/">POS System Prototype</a>
-                    </div>
-                    <div id="spacer"></div>
-                    <div id="separator"></div>
-                    <div id="spacer"></div>
-                    <h2>Python Programs</h2>
-                    <div class="page-list">
-                        <a href="https://github.com/isaiahnoelsalazar/SamplePythonTurtleKeyInput/">Sample Python Turtle - Key Input | School Work</a>
-                        <a href="https://github.com/isaiahnoelsalazar/SamplePythonTurtleYellowDucky/">Sample Python Turtle - Yellow Ducky | School Work</a>
-                    </div>
-                    <div id="spacer"></div>
-                    <div id="separator"></div>
-                    <div id="spacer"></div>
-                    <h2>Unity Games</h2>
-                    <div class="page-list">
-                        <a href="https://github.com/isaiahnoelsalazar/SalazarIsaiahNoel_BSIT701P_Lab2/">SalazarIsaiahNoel_BSIT701P_Lab2 | School Work</a>
-                    </div>
-                    <div id="spacer"></div>
-                    <div id="separator"></div>
-                    <div id="spacer"></div>
-                    <h2>Android Dependencies</h2>
-                    <div class="page-list">
-                        <a href="https://github.com/isaiahnoelsalazar/SimpleFunctions/">SimpleFunctions (Android 7.1+)</a>
-                    </div>
-                    <div id="spacer"></div>
-                    <div id="separator"></div>
-                    <div id="spacer"></div>
-                    <h2>NuGet Packages</h2>
-                    <div class="page-list">
-                        <a href="https://github.com/isaiahnoelsalazar/CSSimpleFunctions/">CSSimpleFunctions (.NET 6.0+ | .NET Framework 4.5+)</a>
-                    </div>
                 </div>
                 <div id="spacer"></div>
             </div>
@@ -276,4 +146,5 @@
         </div>
     </body>
     <script src="js/index.js"></script>
+    <script src="js/links.js"></script>
 </html>
