--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                     <p>© 2025 Isaiah Noel P. Salazar</p>
                 </div>
             </div>
-            <div class="pages content">
-                <div id="pages-div-1">
+            <div class="my-works content">
+                <div id="my-works-div-1">
                 </div>
                 <div id="spacer"></div>
             </div>
