--- a/index.html
+++ b/index.html
@@ -10,41 +10,41 @@
         <meta name="msvalidate.01" content="4FA93A0B497A177CB4CDC5AD79DBDD0C" />
         <meta property="og:title" content="Isaiah Noel P. Salazar">
         <meta property="og:description" content="A personal website built to showcase my skills, the variety of projects I have accumulated through the years, and my contact information and updated CV.">
-        <meta property="og:image" content="resources/banner.png">
+        <meta property="og:image" content="banner.png">
         <meta property="og:url" content="https://isaiahnoelsalazar.github.io/my-website/">
         <meta property="og:type" content="website">
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Isaiah Noel P. Salazar">
         <meta name="twitter:description" content="A personal website built to showcase my skills, the variety of projects I have accumulated through the years, and my contact information and updated CV.">
-        <meta name="twitter:image" content="resources/banner.png">
+        <meta name="twitter:image" content="banner.png">
         <meta name="description" content="A personal website built to showcase my skills, the variety of projects I have accumulated through the years, and my contact information and updated CV.">
         <meta name="keywords" content="Isaiah Noel P. Salazar, Isaiah Noel Salazar, Personal Website, Portfolio, isaiah noel salazar, isaiah, noel, salazar, isaiah salazar, personal, website, portfolio, isaiah noel salazar website, Isaiah Noel P. Salazar website, Isaiah Noel Salazar website">
         <meta name="author" content="Isaiah Noel P. Salazar">
         <meta name="robots" content="index, follow">
         <meta name="theme-color" content="#1F1F1F">
-        <link rel="apple-touch-icon" sizes="57x57" href="resources/apple-icon-57x57.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="resources/apple-icon-60x60.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="resources/apple-icon-72x72.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="resources/apple-icon-76x76.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="resources/apple-icon-114x114.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="resources/apple-icon-120x120.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="resources/apple-icon-144x144.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="resources/apple-icon-152x152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="resources/apple-icon-180x180.png">
-        <link rel="icon" type="image/png" sizes="192x192"  href="resources/android-icon-192x192.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="resources/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="resources/favicon-96x96.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="resources/favicon-16x16.png">
-        <link rel="manifest" href="resources/manifest.json">
+        <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+        <link rel="manifest" href="manifest.json">
         <meta name="msapplication-TileColor" content="#1F1F1F">
-        <meta name="msapplication-TileImage" content="resources/ms-icon-144x144.png">
+        <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
         <title>Isaiah Noel P. Salazar</title>
-        <link rel="stylesheet" href="css/colors.css">
-        <link rel="stylesheet" href="css/fonts.css">
-        <link rel="stylesheet" href="css/index.css">
-        <link rel="stylesheet" href="css/home.css">
-        <link rel="stylesheet" href="css/my_works.css">
-        <link rel="stylesheet" href="css/contacts.css">
+        <link rel="stylesheet" href="colors.css">
+        <link rel="stylesheet" href="fonts.css">
+        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="home.css">
+        <link rel="stylesheet" href="my_works.css">
+        <link rel="stylesheet" href="contacts.css">
     </head>
     <body>
         <div id="navbar">
@@ -74,7 +74,7 @@
                         </div>
                     </div>
                     <div>
-                        <img fetchpriority="high" src="resources/profile_pic.jpg" alt="profile_picture">
+                        <img fetchpriority="high" src="profile_pic.jpg" alt="profile_picture">
                     </div>
                 </div>
                 <div id="home-div-2">
@@ -84,7 +84,7 @@
                     <div id="separator"></div>
                     <div>
                         <div>
-                            <img src="resources/android.png" alt="work1_icon">
+                            <img src="android.png" alt="work1_icon">
                             <!-- The Android robot is reproduced or modified from work created and shared by Google 
                                 and used according to terms described in the Creative Commons 3.0 Attribution License. -->
                         </div>
@@ -97,7 +97,7 @@
                     <div id="separator"></div>
                     <div>
                         <div>
-                            <img src="resources/package.png" alt="work2_icon">
+                            <img src="package.png" alt="work2_icon">
                         </div>
                         <div>
                             <h2>CSSimpleFunctions</h2>
@@ -108,7 +108,7 @@
                     <div id="separator"></div>
                     <div>
                         <div>
-                            <img src="resources/my-website-icon.png" alt="work3_icon">
+                            <img src="my-website-icon.png" alt="work3_icon">
                         </div>
                         <div>
                             <h2>My website</h2>
@@ -130,14 +130,14 @@
                 <div id="contacts-div-1">
                     <div>
                         <a href="https://www.facebook.com/profile.php?id=100085006483044">
-                            <img src="resources/facebook.png" alt="Facebook_icon"/>
+                            <img src="facebook.png" alt="Facebook_icon"/>
                         </a>
                         <a href="https://x.com/IsaiahNoelSal16">
-                            <img src="resources/instagram.png" alt="Instagram_icon"/>
+                            <img src="instagram.png" alt="Instagram_icon"/>
                         </a>
                     </div>
                     <a href="mailto:isaiahnoelsalazar474@gmail.com">
-                        <img src="resources/mail.png" alt="mail_icon"/>
+                        <img src="mail.png" alt="mail_icon"/>
                         <p>isaiahnoelsalazar474@gmail.com</p>
                     </a>
                 </div>
@@ -145,6 +145,6 @@
             </div>
         </div>
     </body>
-    <script src="js/index.js"></script>
-    <script src="js/links.js"></script>
+    <script src="index.js"></script>
+    <script src="links.js"></script>
 </html>
