--- a/index.html
+++ b/index.html
@@ -39,12 +39,398 @@
         <meta name="msapplication-TileColor" content="#1F1F1F">
         <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
         <title>Isaiah Noel P. Salazar</title>
-        <link rel="stylesheet" href="colors.css">
-        <link rel="stylesheet" href="fonts.css">
-        <link rel="stylesheet" href="index.css">
-        <link rel="stylesheet" href="home.css">
-        <link rel="stylesheet" href="my_works.css">
-        <link rel="stylesheet" href="contacts.css">
+        <style>
+            :root {
+                --primary-color: #EEF5FC;
+                --secondary-color: #C7D6E2;
+                --tertiary-color: #4088C7;
+                --quaternary-color: #2069A8;
+                --black: #1F1F1F;
+                --gray: #DDDDDD;
+                --light-gray: #EEEEEE;
+                --dark-secondary-color: #ABBCCA;
+            }
+            @font-face {
+                font-family: "Righteous";
+                src: url("Righteous.ttf");
+            }
+            * {
+                box-sizing: border-box;
+                color: var(--black);
+                font-family: Righteous;
+            }
+            html {
+                background-color: var(--primary-color);
+                height: 100%;
+                -webkit-tap-highlight-color: transparent;
+            }
+            body {
+                background-color: var(--primary-color);
+                height: 100%;
+                margin: 0;
+            }
+            #navbar {
+                background-color: var(--black);
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr;
+                justify-content: center;
+            }
+            .tab-container {
+                background-color: var(--primary-color);
+                border-radius: 16px;
+            }
+            .tab-container > p {
+                margin: 0;
+                text-align: center;
+            }
+            .tab {
+                align-items: center;
+                background-color: var(--black);
+                border-radius: 16px;
+                color: white;
+                cursor: pointer;
+                display: flex;
+                height: 56px;
+                justify-content: center;
+            }
+            .tab-container:first-child {
+                border-radius: 16px 16px 0 0;
+            }
+            .tab-container:nth-child(2) {
+                border-radius: 16px 16px 16px 0;
+            }
+            .tab-container:last-child {
+                border-radius: 16px;
+            }
+            .selected {
+                background-color: var(--primary-color);
+                color: var(--black);
+            }
+            .unselected {
+                background-color: var(--black);
+                color: white;
+            }
+            #main {
+                display: flex;
+                flex-direction: column;
+                height: calc(100% - 56px);
+            }
+            .content {
+                background-color: var(--primary-color);
+                display: none;
+                height: 100%;
+            }
+            .footer {
+                background-color: var(--black);
+                width: 100%;
+            }
+            .footer > p {
+                align-items: center;
+                color: white;
+                display: flex;
+                height: 56px;
+                justify-content: center;
+                margin: 0;
+            }
+            .pages-footer, .contacts-footer {
+                background-color: var(--black);
+                bottom: 0;
+                position: fixed;
+                width: 100%;
+            }
+            .pages-footer > p, .contacts-footer > p {
+                align-items: center;
+                color: white;
+                display: flex;
+                height: 56px;
+                justify-content: center;
+                margin: 0;
+            }
+            @media (max-width: 800px) {
+                .pages-footer {
+                    bottom: unset;
+                    position: unset;
+                }
+            }
+            .home {
+                align-items: center;
+                display: flex;
+                flex-direction: column;
+                padding: 16px 0;
+                width: 100%;
+            }
+            #home-div-1 {
+                align-items: center;
+                display: flex;
+                gap: 16px;
+                justify-content: space-evenly;
+                margin: 0 0 16px 0;
+                max-width: 1000px;
+                padding: 16px 0;
+                width: calc(100% - 32px);
+            }
+            #home-div-2 {
+                background-color: var(--secondary-color);
+                border-radius: 8px;
+                display: flex;
+                flex-direction: column;
+                gap: 16px;
+                padding: 16px;
+                width: 67%;
+            }
+            #home-div-2 > div {
+                display: flex;
+                gap: 16px;
+            }
+            #home-div-2 > div:nth-child(5) {
+                flex-direction: row-reverse;
+            }
+            #home-div-2 > div > div {
+                align-items: start;
+                display: flex;
+                flex-direction: column;
+                width: 50%;
+            }
+            #home-div-2 > div > h2, #home-div-2 > div > p {
+                text-align: center;
+                width: 100%;
+            }
+            #home-div-2 > div > div > h2, #home-div-2 > div > div > p {
+                hyphens: auto;
+                margin: 0;
+                overflow-wrap: break-word;
+                padding: 16px 16px 0 16px;
+                width: 100%;
+                -ms-hyphens: auto;
+                -moz-hyphens: auto;
+            }
+            #home-div-2 > div > div > img {
+                align-self: center;
+                border-radius: 8px;
+                max-width: 360px;
+                width: 100%;
+            }
+            #home-div-2 > div > div > a {
+                background-color: var(--tertiary-color);
+                border: solid var(--tertiary-color) 2px;
+                border-radius: 8px;
+                color: white;
+                cursor: pointer;
+                margin: 16px;
+                padding: 12px 16px;
+                text-decoration: none;
+            }
+            #home-div-2 > div > div > a:hover {
+                background-color: var(--quaternary-color);
+                border: solid var(--quaternary-color) 2px;
+                color: white;
+            }
+            #separator {
+                background-color: var(--dark-secondary-color);
+                border-radius: 8px;
+                height: 2px;
+                width: 100%;
+            }
+            #spacer {
+                background-color: var(--primary-color);
+                border-radius: 8px;
+                display: flex;
+                height: 2px;
+                padding: 8px 0;
+                width: 100%;
+            }
+            #home-div-1 > div {
+                display: flex;
+                flex-direction: column;
+            }
+            #home-div-1 > div:first-child {
+                align-items: center;
+                width: 67%;
+            }
+            #home-div-1 > div:last-child {
+                align-items: start;
+                width: 33%;
+            }
+            #home-div-1 > div > img {
+                border-radius: 50%;
+                max-width: 360px;
+                width: 100%;
+            }
+            #home-div-1 > div > div > h1 {
+                margin: 0;
+            }
+            #home-div-1 > div > div > div {
+                display: flex;
+                gap: 16px;
+            }
+            #home-div-1 > div > div > div > a, #home-div-1 > div > div > div > div {
+                align-items: center;
+                border: solid var(--tertiary-color) 2px;
+                border-radius: 8px;
+                cursor: pointer;
+                display: flex;
+                padding: 16px;
+                text-align: center;
+                text-decoration: none;
+            }
+            #home-div-1 > div > div > div > a {
+                background-color: var(--tertiary-color);
+                border: solid var(--tertiary-color) 2px;
+                border-radius: 8px;
+                color: white;
+                cursor: pointer;
+                padding: 16px;
+                text-decoration: none;
+            }
+            #home-div-1 > div > div > div > a:hover, #home-div-1 > div > div > div > div:hover {
+                background-color: var(--quaternary-color);
+                border: solid var(--quaternary-color) 2px;
+                color: white;
+            }
+            @media (max-width: 752px) {
+                #home-div-2 {
+                    width: calc(100% - 32px);
+                }
+                #home-div-2 > div > div {
+                    align-items: stretch;
+                    justify-content: center;
+                }
+                #home-div-2 > div > div > a {
+                    text-align: center;
+                }
+            }
+            @media (max-width: 752px) {
+                #home-div-1 {
+                    flex-direction: column-reverse;
+                }
+                #home-div-1 > div:first-child {
+                    align-items: center;
+                    width: 100%;
+                }
+                #home-div-1 > div:last-child {
+                    align-items: center;
+                    width: 100%;
+                }
+                #home-div-1 > div > div > h1, #home-div-1 > div > div > h2, #home-div-1 > div > div > p {
+                    text-align: center;
+                }
+                #home-div-1 > div > div > div {
+                    justify-content: center;
+                }
+            }
+            @media (max-width: 392px) {
+                #home-div-1 > div > img {
+                    width: calc(100% - 32px);
+                }
+            }
+            .my-works {
+                align-items: center;
+                flex-direction: column;
+                padding: 16px 0;
+            }
+            #my-works-div-1 {
+                padding: 8px 0;
+            }
+            #my-works-div-1 > h2 {
+                margin: 0;
+                text-align: center;
+                width: 720px;
+            }
+            .link-list {
+                align-items: center;
+                cursor: pointer;
+                display: flex;
+                flex-direction: column;
+                margin: 8px 0 0 0;
+                width: 100%;
+                -webkit-tap-highlight-color: transparent;
+            }
+            .link-list > a {
+                color: var(--black);
+                font-size: larger;
+                padding: 8px;
+                text-decoration: none;
+                width: 600px;
+            }
+            .link-list > a:hover {
+                text-decoration: underline;
+            }
+            @media (max-width: 800px) {
+                #my-works-div-1, #my-works-div-1 > h2 {
+                    align-items: center;
+                    display: flex;
+                    flex-direction: column;
+                    width: calc(100% - 32px);
+                }
+                .link-list > a {
+                    width: 100%;
+                }
+            }
+            .contacts {
+                align-items: center;
+                flex-direction: column;
+                padding: 16px 0;
+            }
+            #contacts-div-1 {
+                align-items: center;
+                display: flex;
+                flex-direction: column;
+                gap: 16px;
+                margin: 0 0 16px 0;
+                width: 600px;
+                -webkit-tap-highlight-color: transparent;
+            }
+            #contacts-div-1 > div {
+                align-items: center;
+                display: flex;
+                justify-content: center;
+                width: 100%;
+            }
+            #contacts-div-1 > div > a {
+                align-items: center;
+                border-radius: 8px;
+                display: flex;
+                height: 80px;
+                justify-content: center;
+                width: 80px;
+            }
+            #contacts-div-1 > div > a > img {
+                height: 64px;
+                width: 64px;
+            }
+            #contacts-div-1 > div > a:last-child > img {
+                height: 80px;
+                width: 80px;
+            }
+            #contacts-div-1 > div > a:hover {
+                background-color: var(--secondary-color);
+            }
+            #contacts-div-1 > a {
+                align-items: center;
+                background-color: var(--secondary-color);
+                border-radius: 8px;
+                color: var(--black);
+                display: flex;
+                gap: 8px;
+                justify-content: center;
+                padding: 16px;
+                text-decoration: none;
+            }
+            #contacts-div-1 > a:hover {
+                text-decoration: underline;
+            }
+            #contacts-div-1 > a > p {
+                margin: 0;
+            }
+            @media (max-width: 600px) {
+                #contacts-div-1 {
+                    width: calc(100% - 32px);
+                }
+                #contacts-div-1 > a {
+                    width: 100%;
+                }
+            }
+        </style>
     </head>
     <body>
         <div id="navbar">
