--- a/index.html
+++ b/index.html
@@ -39,8 +39,22 @@
         <meta name="msapplication-TileColor" content="#1F1F1F">
         <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
         <title>Isaiah Noel P. Salazar</title>
-        <link rel="stylesheet" href="colors.css">
-        <link rel="stylesheet" href="fonts.css">
+        <style>
+            :root {
+                --primary-color: #EEF5FC;
+                --secondary-color: #C7D6E2;
+                --tertiary-color: #4088C7;
+                --quaternary-color: #2069A8;
+                --black: #1F1F1F;
+                --gray: #DDDDDD;
+                --light-gray: #EEEEEE;
+                --dark-secondary-color: #ABBCCA;
+            }
+            @font-face {
+                font-family: "Righteous";
+                src: url("Righteous.ttf");
+            }
+        </style>
         <link rel="stylesheet" href="index.css">
         <link rel="stylesheet" href="home.css">
         <link rel="stylesheet" href="my_works.css">
