--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             }
             @font-face {
                 font-family: "Righteous";
+                font-display: swap;
                 src: url("Righteous.ttf");
             }
         </style>
