Added more info

--- a/index.html
+++ b/index.html
@@ -77,15 +77,13 @@
             <div class="home content">
                 <div id="home-div-1">
                     <div>
+                        <h1>Isaiah Noel P. Salazar</h1>
+                        <h2>Welcome to my website!</h2>
+                        <p>I am a 4th-year BSIT student. Throughout my academic journey, I have developed a strong foundation in areas such as programming, and software development.</p>
                         <div>
-                            <h1>Isaiah Noel P. Salazar</h1>
-                            <h2>Welcome to my website!</h2>
-                            <p>I am a 4th-year BSIT student. Throughout my academic journey, I have developed a strong foundation in areas such as programming, and software development.</p>
-                            <div>
-                                <a href="Isaiah_Noel_Salazar_CV.pdf" download="Isaiah_Noel_Salazar_CV.pdf">Download CV</a>
-                                <div onclick="mouseClick(1)">View my works</div>
-                                <div onclick="mouseClick(2)">Contact me</div>
-                            </div>
+                            <a href="Isaiah_Noel_Salazar_CV.pdf" download="Isaiah_Noel_Salazar_CV.pdf">Download CV</a>
+                            <div onclick="mouseClick(1)">View my works</div>
+                            <div onclick="mouseClick(2)">Contact me</div>
                         </div>
                     </div>
                     <div>
@@ -96,7 +94,7 @@
                     <div>
                         <h2>My Favorite Works</h2>
                     </div>
-                    <div id="separator"></div>
+                    <div class="separator"></div>
                     <div>
                         <div>
                             <img src="android.png" alt="work1_icon">
@@ -109,7 +107,7 @@
                             <a href="https://github.com/isaiahnoelsalazar/SimpleFunctions/">View in GitHub</a>
                         </div>
                     </div>
-                    <div id="separator"></div>
+                    <div class="separator"></div>
                     <div>
                         <div>
                             <img src="package.png" alt="work2_icon">
@@ -120,7 +118,7 @@
                             <a href="https://github.com/isaiahnoelsalazar/CSSimpleFunctions/">View in GitHub</a>
                         </div>
                     </div>
-                    <div id="separator"></div>
+                    <div class="separator"></div>
                     <div>
                         <div>
                             <img src="my-website-icon.png" alt="work3_icon">
@@ -131,7 +129,49 @@
                         </div>
                     </div>
                 </div>
-                <div id="spacer"></div>
+                <div id="home-div-3">
+                    <div>
+                        <h2>Extracurricular Activities</h2>
+                    </div>
+                    <div class="separator"></div>
+                    <div class="activity">
+                        <h2>STI Tagisan ng Talino - Codefest (2022-2025)</h2>
+                        <ul>
+                            <li>
+                                <p>Achieved the title of Local Champions for 3 consecutive years</p>
+                            </li>
+                            <li>
+                                <p>Secured 1st Runner-Up at the Cluster Level on 2 occasions</p>
+                            </li>
+                            <li>
+                                <p>Served as lead programmer, responsible for the back-end development and full code integration</p>
+                            </li>
+                        </ul>
+                        <h2>Images</h2>
+                        <div class="images-container">
+                            <div>
+                                <img src="codefest_local_1styear.png" alt="codefest_local_1styear">
+                                <p>Local Champions - 1st Year</p>
+                            </div>
+                            <div>
+                                <img src="codefest_cluster_1styear.jpg" alt="codefest_cluster_1styear">
+                                <p>Cluster Level 1st Runner-Up - 1st Year</p>
+                            </div>
+                            <div>
+                                <img src="codefest_local_2ndyear.jpg" alt="codefest_local_2ndyear">
+                                <p>Local Champions - 2nd Year</p>
+                            </div>
+                            <div>
+                                <img src="codefest_cluster_2ndyear.jpg" alt="codefest_cluster_2ndyear">
+                                <p>Cluster Level 1st Runner-Up - 2nd Year</p>
+                            </div>
+                            <div>
+                                <img src="codefest_local_3rdyear.jpg" alt="codefest_local_3rdyear">
+                                <p>Local Champions - 3rd Year</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="footer">
                     <p>© 2025 Isaiah Noel P. Salazar</p>
                 </div>
@@ -139,7 +179,7 @@
             <div class="my-works content">
                 <div id="my-works-div-1">
                 </div>
-                <div id="spacer"></div>
+                <div class="spacer"></div>
             </div>
             <div class="contacts content">
                 <div id="contacts-div-1">
@@ -156,7 +196,7 @@
                         <p>isaiahnoelsalazar474@gmail.com</p>
                     </a>
                 </div>
-                <div id="spacer"></div>
+                <div class="spacer"></div>
             </div>
         </div>
     </body>
