--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <div>
                         <h1>Isaiah Noel P. Salazar</h1>
                         <h2>Welcome to my website!</h2>
-                        <p>I am a 4th-year BSIT student. Throughout my academic journey, I have developed a strong foundation in areas such as programming, and software development.</p>
+                        <p>I am a 4th-year BSIT student at STI College Santa Rosa. Throughout my academic journey, I have developed a strong foundation in areas such as programming, and software development.</p>
                         <div>
                             <a href="Isaiah_Noel_Salazar_CV.pdf" download="Isaiah_Noel_Salazar_CV.pdf">Download CV</a>
                             <div onclick="mouseClick(1)">View my works</div>
