Updated website design

--- a/index.html
+++ b/index.html
@@ -150,23 +150,23 @@
                         <h2>Images</h2>
                         <div class="images-container">
                             <div>
-                                <img src="codefest_local_1styear.png" alt="codefest_local_1styear">
+                                <img src="http://openweb.fwh.is/my-website-images/codefest_local_1styear.png" alt="codefest_local_1styear">
                                 <p>Local Champions - 1st Year</p>
                             </div>
                             <div>
-                                <img src="codefest_cluster_1styear.jpg" alt="codefest_cluster_1styear">
+                                <img src="http://openweb.fwh.is/my-website-images/codefest_cluster_1styear.jpg" alt="codefest_cluster_1styear">
                                 <p>Cluster Level 1st Runner-Up - 1st Year</p>
                             </div>
                             <div>
-                                <img src="codefest_local_2ndyear.jpg" alt="codefest_local_2ndyear">
+                                <img src="http://openweb.fwh.is/my-website-images/codefest_local_2ndyear.jpg" alt="codefest_local_2ndyear">
                                 <p>Local Champions - 2nd Year</p>
                             </div>
                             <div>
-                                <img src="codefest_cluster_2ndyear.jpg" alt="codefest_cluster_2ndyear">
+                                <img src="http://openweb.fwh.is/my-website-images/codefest_cluster_2ndyear.jpg" alt="codefest_cluster_2ndyear">
                                 <p>Cluster Level 1st Runner-Up - 2nd Year</p>
                             </div>
                             <div>
-                                <img src="codefest_local_3rdyear.jpg" alt="codefest_local_3rdyear">
+                                <img src="http://openweb.fwh.is/my-website-images/codefest_local_3rdyear.jpg" alt="codefest_local_3rdyear">
                                 <p>Local Champions - 3rd Year</p>
                             </div>
                         </div>
