update: introduced IntersectionObservers in some images

--- a/index.html
+++ b/index.html
@@ -150,23 +150,23 @@
                         <h2>Images</h2>
                         <div class="images-container">
                             <div>
-                                <img src="https://i.ibb.co/gCynb09/codefest-local-1styear.png" alt="codefest_local_1styear">
+                                <img data-lazy="https://i.ibb.co/gCynb09/codefest-local-1styear.png" alt="codefest_local_1styear">
                                 <p>Local Champions - 1st Year</p>
                             </div>
                             <div>
-                                <img src="https://i.ibb.co/67sR9G8K/codefest-cluster-1styear.jpg" alt="codefest_cluster_1styear">
+                                <img data-lazy="https://i.ibb.co/67sR9G8K/codefest-cluster-1styear.jpg" alt="codefest_cluster_1styear">
                                 <p>Cluster Level 1st Runner-Up - 1st Year</p>
                             </div>
                             <div>
-                                <img src="https://i.ibb.co/wFNr7bnc/codefest-local-2ndyear.jpg" alt="codefest_local_2ndyear">
+                                <img data-lazy="https://i.ibb.co/wFNr7bnc/codefest-local-2ndyear.jpg" alt="codefest_local_2ndyear">
                                 <p>Local Champions - 2nd Year</p>
                             </div>
                             <div>
-                                <img src="https://i.ibb.co/QvLBN8rS/codefest-cluster-2ndyear.jpg" alt="codefest_cluster_2ndyear">
+                                <img data-lazy="https://i.ibb.co/QvLBN8rS/codefest-cluster-2ndyear.jpg" alt="codefest_cluster_2ndyear">
                                 <p>Cluster Level 1st Runner-Up - 2nd Year</p>
                             </div>
                             <div>
-                                <img src="https://i.ibb.co/nMWnfPCd/codefest-local-3rdyear.jpg" alt="codefest_local_3rdyear">
+                                <img data-lazy="https://i.ibb.co/nMWnfPCd/codefest-local-3rdyear.jpg" alt="codefest_local_3rdyear">
                                 <p>Local Champions - 3rd Year</p>
                             </div>
                         </div>
