update: fixed InteractionObserver not being applied to some images

--- a/index.html
+++ b/index.html
@@ -200,4 +200,5 @@
     </body>
     <script src="index.js"></script>
     <script src="links.js"></script>
+    <script src="interactionobserver.js"></script>
 </html>
