update: add PythonSimpleFunctions section to index.html with project details and link

--- a/index.html
+++ b/index.html
@@ -119,13 +119,23 @@
                         </div>
                     </div>
                     <div class="separator"></div>
-                    <div>
+                    <!-- <div>
                         <div>
                             <img src="my-website-icon.png" alt="work3_icon">
                         </div>
                         <div>
                             <h2>My website</h2>
                             <p>A personal website that aims to showcase my works.</p>
+                        </div>
+                    </div> -->
+                    <div>
+                        <div>
+                            <img src="package.png" alt="work3_icon">
+                        </div>
+                        <div>
+                            <h2>PythonSimpleFunctions</h2>
+                            <p>PyPI package designed to make development in Python easier.</p>
+                            <a href="https://github.com/isaiahnoelsalazar/PythonSimpleFunctions/">View in GitHub</a>
                         </div>
                     </div>
                 </div>
