--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
                     <div class="separator"></div>
                     <div>
                         <div>
-                            <img src="package.png" alt="work2_icon">
+                            <img src="logo_net.svg" alt="work2_icon">
                         </div>
                         <div>
-                            <h2>CSSimpleFunctions</h2>
-                            <p>NuGet package designed to make development in C# easier.</p>
-                            <a href="https://github.com/isaiahnoelsalazar/CSSimpleFunctions/">View in GitHub</a>
+                            <h2>NETSimpleFunctions</h2>
+                            <p>NuGet package designed to make development in .NET 10.0+ easier.</p>
+                            <a href="https://github.com/isaiahnoelsalazar/NETSimpleFunctions/">View in GitHub</a>
                         </div>
                     </div>
                     <div class="separator"></div>
