--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         </div>
                         <div>
                             <h2>NETSimpleFunctions</h2>
-                            <p>NuGet package designed to make development in .NET 6.0+ easier.</p>
+                            <p>NuGet package designed to make development in C# easier.</p>
                             <a href="https://github.com/isaiahnoelsalazar/NETSimpleFunctions/">View in GitHub</a>
                         </div>
                     </div>
