new: add GitHub profile link in contacts section

--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
                             <img src="instagram.png" alt="Instagram_icon"/>
                         </a>
                     </div>
+                    <a href="https://www.github.com/isaiahnoelsalazar">
+                        <img src="GitHub_Invertocat_Black.png" alt="GitHub_icon"/>
+                        <p>isaiahnoelsalazar</p>
+                    </a>
                     <a href="mailto:isaiahnoelsalazar474@gmail.com">
                         <img src="mail.png" alt="mail_icon"/>
                         <p>isaiahnoelsalazar474@gmail.com</p>
